--- a/main.html
+++ b/main.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<ol>
+		<li data_ns_test="shopping list">Fridge</li>
+		<li data_ns_test="shopping list">Washing machine</li>
+		<li data_ns_test="shopping list">scooty</li>
+	</ol>
+	<ul>
+		<li data_ns_test="holiday list" >Ooty</li>
+		<li data_ns_test="holiday list" >Kerala</li>
+		<li data_ns_test="holiday list" >Singapore</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
