--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 
 <body>
 	<ol>
-		<li data_ns_test="shopping list">Fridge</li>
-		<li data_ns_test="shopping list">Washing machine</li>
-		<li data_ns_test="shopping list">scooty</li>
+		<li data-ns-test="shopping list">Fridge</li>
+		<li data-ns-test="shopping list">Washing machine</li>
+		<li data-ns-test="shopping list">scooty</li>
 	</ol>
 	<ul>
-		<li data_ns_test="holiday list" >Ooty</li>
-		<li data_ns_test="holiday list" >Kerala</li>
-		<li data_ns_test="holiday list" >Singapore</li>
+		<li data-ns-test="holiday list" >Ooty</li>
+		<li data-ns-test="holiday list" >Kerala</li>
+		<li data-ns-test="holiday list" >Singapore</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
