--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<ol>
+	<nav>
+		<ol>
 		<li data-ns-test="shopping list">Fridge</li>
 		<li data-ns-test="shopping list">Washing machine</li>
 		<li data-ns-test="shopping list">scooty</li>
@@ -17,6 +18,8 @@
 		<li data-ns-test="holiday list" >Kerala</li>
 		<li data-ns-test="holiday list" >Singapore</li>
 	</ul>
+	</nav>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
