--- a/main.html
+++ b/main.html
@@ -7,8 +7,6 @@
 </head>
 
 <body>
-	<!-- Entire document student-->
-	<nav>
 		<ol>
 		<li data-ns-test="shopping list">Fridge</li>
 		<li data-ns-test="shopping list">Washing machine</li>
@@ -19,8 +17,7 @@
 		<li data-ns-test="holiday list" >Kerala</li>
 		<li data-ns-test="holiday list" >Singapore</li>
 	</ul>
-	</nav>
-	
+	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
