--- a/main.html
+++ b/main.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-		<ol>
-		<li data-ns-test="shopping list">Fridge</li>
-		<li data-ns-test="shopping list">Washing machine</li>
-		<li data-ns-test="shopping list">scooty</li>
+
+	<ol>
+		<li data-ns-test="shoppingList">Fridge</li>
+		<li data-ns-test="shoppingList">Washing machine</li>
+		<li data-ns-test="shoppingList">Mobile</li>
 	</ol>
 	<ul>
-		<li data-ns-test="holiday list" >Ooty</li>
-		<li data-ns-test="holiday list" >Kerala</li>
-		<li data-ns-test="holiday list" >Singapore</li>
+		<li data-ns-test="holidayList">Ooty</li>
+		<li data-ns-test="holidayList">Kerala</li>
+		<li data-ns-test="holidayList">Munar</li>
 	</ul>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
